--- a/src/less/global/fonts.less
+++ b/src/less/global/fonts.less
@@ -1,46 +1,15 @@
-@import (css) url("//hello.myfonts.net/count/392779");
-
-  
-@font-face {font-family: 'AvenirNextLTPro-Light';src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_0_0.eot');src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_0_0.eot?#iefix') format('embedded-opentype'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_0_0.woff2') format('woff2'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_0_0.woff') format('woff'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_0_0.ttf') format('truetype');}
-@font-face {font-family: 'AvenirNextLTPro-Medium';src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_1_0.eot');src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_1_0.eot?#iefix') format('embedded-opentype'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_1_0.woff2') format('woff2'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_1_0.woff') format('woff'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts//392779_1_0.ttf') format('truetype');}
- 
+@import (css) url("//hello.myfonts.net/count/392922");
 
 
-/* latin */
-@font-face {
-  font-family: 'ProductSans-Light';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Product Sans Light'), local('ProductSans-Light'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/ProductSans-Light.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin */
-@font-face {
-  font-family: 'ProductSans-Regular';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Product Sans'), local('ProductSans-Regular'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/ProductSans-Regular.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin */
-@font-face {
-  font-family: 'ProductSans-Medium';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: local('Product-Sans Medium'), local('ProductSans-Medium'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/ProductSans-Medium.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin */
-@font-face {
-  font-family: 'ProductSans-Bold';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: local('Product-Sans Bold'), local('ProductSans-Bold'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/ProductSans-Bold.woff2") format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+@font-face {font-family: 'AvenirNextLTPro-Light';src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_0_0.eot');src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_0_0.eot?#iefix') format('embedded-opentype'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_0_0.woff2') format('woff2'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_0_0.woff') format('woff'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_0_0.ttf') format('truetype');}
+@font-face {font-family: 'AvenirNextLTPro-Medium';src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_1_0.eot');src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_1_0.eot?#iefix') format('embedded-opentype'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_1_0.woff2') format('woff2'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_1_0.woff') format('woff'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_1_0.ttf') format('truetype');}
+
+
+@font-face {font-family: 'TTNormsPro-Regular';src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_2_0.eot');src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_2_0.eot?#iefix') format('embedded-opentype'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_2_0.woff2') format('woff2'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_2_0.woff') format('woff'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_2_0.ttf') format('truetype');}
+@font-face {font-family: 'TTNormsPro-Medium';src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_3_0.eot');src: url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_3_0.eot?#iefix') format('embedded-opentype'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_3_0.woff2') format('woff2'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_3_0.woff') format('woff'),url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/392922_3_0.ttf') format('truetype');}
+
+
+
 @font-face {
   font-family: 'Hack';
   src: url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/hack-regular.woff2") format('woff2'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/hack-regular.woff") format('woff');
