--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -31,7 +31,7 @@ section {
 }
 
 strong {
-	font-family: 'AvenirNextLTPro-Medium', sans-serif;
+	font-family: @body-font-bold;
 }
 
 a {
@@ -44,7 +44,7 @@ a {
 
 .h1,
 h1 {
-	font-family: 'ProductSans-Bold', 'AvenirNextLTPro-Light', sans-serif;
+	font-family: @h1-font;
 	font-size: 2.5em;
 	font-weight: 500;
 	color: @header-color;
