--- a/src/less/global/search.less
+++ b/src/less/global/search.less
@@ -28,7 +28,7 @@ nav {
       color: white;
       padding-left: 20px;
       font-size: 1em;
-      font-family: AvenirNextLTPro-Light, sans-serif;
+      font-family: @body-font;
       font-weight: 300;
       @media(max-width: @tablet-breakpoint) {
         width: 150px !important;
@@ -154,7 +154,7 @@ nav {
 
       a {
         font-size: 0.8em;
-        font-family: AvenirNextLTPro-Light, sans-serif;
+        font-family: @body-font;
       }
 
       &:nth-child(even) {
