--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -351,7 +351,7 @@
 			letter-spacing: 0;
 			font-size: 15px;
 			margin: 0;
-			font-family: 'AvenirNextLTPro-Light',sans-serif;
+			font-family: @body-font-bold;
 			display: flex;
 			align-items: center;
 			@media(max-width: 950px) {
@@ -463,7 +463,7 @@
 			line-height: 1.2;
 			font-size: 15px;
 			margin: 0;
-			font-family: @body-font;
+			font-family: @body-font-bold;
 			display: inline-block;
 
 			&:hover {
@@ -501,7 +501,7 @@
 		.post-title {
 			a {
 				color: #208cad;
-				font-family: 'AvenirNextLTPro-Medium',sans-serif;
+				font-family: @body-font-bold;
 				transition: all 0.2s ease;
 
 				&:hover {
@@ -584,7 +584,7 @@
 
 				.post-title,
 				.single-author-name {
-					font-family: @body-font;
+					font-family: @body-font-bold;
 					transition: all 0.2s ease;
 					line-height: 1.2;
 					.transition(all 0.2s ease);
