--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -94,7 +94,7 @@
         font-size: 1.4em;
 
         a {
-          font-family: 'ProductSans-Medium', sans-serif;
+          font-family: @h1-font;
           font-weight: 500;
         }
       }
@@ -356,7 +356,7 @@
 
         h2 {
           color: #3f4856;
-          font-family: 'ProductSans-Regular', sans-serif;
+          font-family: @h1-font;
           margin-bottom: 7px;
           margin-top: 0;
           font-size: 1.3em;
