--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -35,7 +35,7 @@
     margin-bottom: 10px;
     top: 0;
     left: 0;
-    font-family: 'ProductSans-Regular', sans-serif;
+    font-family: @h1-font;
     font-size: 1.3em;
     font-style: normal;
     font-variant: normal;
