--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -148,7 +148,7 @@
         width: -moz-available;
         text-overflow: ellipsis;
         white-space: nowrap;
-        font-family: AvenirNextLTPro-Light, sans-serif;
+        font-family: @body-font;
       }
 
       thead {
