--- a/partials/widgets/widget-twitter.hbs
+++ b/partials/widgets/widget-twitter.hbs
@@ -1,6 +1,5 @@
  <!-- start feedwind code -->
   <div class="widget twitter">
         <h4 class="title">Twitter</h4>
-      <iframe src="https://feed.mikle.com/widget/v2/96903/" height="745px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
+        <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="105905/"></script>
   </div>
-
