--- a/src/less/author/githubcard.less
+++ b/src/less/author/githubcard.less
@@ -186,7 +186,7 @@
       max-width: 280px;
       text-overflow: ellipsis;
       color: @theme-color;
-      font-family: AvenirNextLTPro-Light, sans-serif;
+      font-family: @body-font;
       font-size: 1em;
     }
 
