--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -15,7 +15,7 @@
 		font-weight: 800;
 		font-size: 1.1em;
 		text-shadow: -1px 1px 1px #133e6d;
-		font-family: 'ProductSans-Medium', sans-serif;
+		font-family: @h1-font;
 		text-align: left;
 		text-transform: uppercase;
 		letter-spacing: 2px;
