--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -207,7 +207,7 @@
 
     .title-desktop {
       margin: 0 0 10px!important;
-      font-family: 'ProductSans-Regular', sans-serif;
+      font-family: @h1-font;
       font-size: 1.3em;
       line-height: 1.3;
       text-align: left;
