--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -62,7 +62,7 @@
 		width: -webkit-fill-available;
 		margin: 20px 0 5px;
 		display: block;
-		font-family: 'ProductSans-Bold', 'AvenirNextLTPro-Light', sans-serif !important;
+		font-family: @h1-font !important;
 		font-size: 2.2em;
 		font-weight: 600;
 		letter-spacing: 0;
@@ -84,12 +84,12 @@
 	}
 
 	.excerpt {
-		font-weight: 400;
+		font-weight: 600;
 		font-size: 1.25em;
 		margin: 10px 0 30px;
 		line-height: 1.3;
 		color: @h1-color;
-		font-family: 'ProductSans-Regular', sans-serif;
+		font-family: @header-light-font;
 		@media(max-width: @tablet-breakpoint) {
 			margin: 10px 0 0;
 		}
@@ -103,7 +103,7 @@
 			margin: 40px 0 10px;
 			color: #555560;
 			line-height: 1.3;
-			font-family: 'AvenirNextLTPro-Light', sans-serif;
+			font-family: @body-font;
 			font-weight: 100!important;
 			font-size: 2em;
 			width: 100%;
@@ -126,7 +126,7 @@
 			line-height: 1.2;
 			color: #555560;
 			margin: 40px 0 10px;
-			font-family: 'AvenirNextLTPro-Medium', sans-serif;
+			font-family: @body-font-bold;
 			font-weight: 300;
 			@media(max-width: @tablet-breakpoint) {
 				font-size: 1.3em;
@@ -135,7 +135,7 @@
 				text-align: left;
 				line-height: 1.3;
 				margin-bottom: 10px;
-				font-family: 'ProductSans-Medium', sans-serif;
+				font-family: @h1-font;
 			}
 		}
 
@@ -159,7 +159,7 @@
 		a {
 			color: @theme-color;
 			transition: all 0.2s ease-out;
-			font-family: 'AvenirNextLTPro-Medium', sans-serif;
+			font-family: @body-font-bold;
 			@media(max-width: @mobile-breakpoint) {
 				white-space: nowrap;
 				overflow: hidden;
