replaced productsans with ttnorms

--- a/src/less/etc/applyform.less
+++ b/src/less/etc/applyform.less
@@ -105,7 +105,7 @@
         &::placeholder {
           color: #72859d;
           opacity: 0.4;
-          font-family: 'AvenirNextLTPro-Light', sans-serif !important;
+          font-family: @body-font !important;
         }
 
         &::after {
