--- a/src/less/etc/error.less
+++ b/src/less/etc/error.less
@@ -35,7 +35,7 @@ header {
   margin: 0;
 
   .content {
-    font-family: 'ProductSans-Regular', 'Avenir', Helvetica, sans-serif;
+    font-family: @header-light-font;
     color: #fff;
     background-color: black;
     z-index: 2;
