--- a/src/less/etc/series.less
+++ b/src/less/etc/series.less
@@ -176,7 +176,7 @@
 
     .post-count {
       margin: 0 0 5px;
-      font-family: 'ProductSans-Regular', serif;
+      font-family: @body-font-bold;
       font-weight: 100;
       color: #407393;
       font-size: 0.9em;
@@ -229,12 +229,12 @@
           line-height: 1.2;
 
           a {
-            font-family: 'ProductSans-Regular',sans-serif;
+            font-family: @header-light-font;
             font-size: 1em;
             transition: all 0.2s ease-out;
             color: #334652;
             @media(max-width: @mobile-breakpoint) {
-              font-family: 'ProductSans-Regular',sans-serif;
+              font-family: @header-light-font;
               font-size: 0.9em;
             }
             @media(max-width: 500px) {
@@ -254,7 +254,7 @@
 
         .post-excerpt {
           color: #153b52;
-          font-family: 'ProductSans-Regular','AvenirNextLTPro-Light',serif;
+          font-family: @header-light-font;
           font-size: 1em;
           font-weight: 100;
           line-height: 1.21;
@@ -267,7 +267,7 @@
         }
 
         .postcount {
-          font-family: 'AvenirNextLTPro-Light',serif;
+          font-family: @body-font;
           font-size: 1.3em;
         }
       }
