--- a/src/less/etc/transaction.less
+++ b/src/less/etc/transaction.less
@@ -7,10 +7,10 @@
 }
 
 h1 {
-  font-family: 'ProductSans-Regular', sans-serif !important;
+  font-family: @header-light-font !important;
 }
 
 a,
 p {
-  font-family: 'AvenirNextLTPro-Light', sans-serif !important;
+  font-family: @body-font !important;
 }
