--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -425,7 +425,6 @@ nav {
 
 			a {
 				color: #fff;
-				font-family: 'ProductSans-Regular',serif;
 				text-transform: uppercase;
 				font-size: 0.85em;
 				font-weight: 600;
@@ -584,7 +583,6 @@ nav {
 			}
 
 			a {
-				font-family: 'ProductSans-Regular';
 				font-size: 0.9em;
 				text-transform: uppercase;
 				transform: scale(1);
@@ -605,7 +603,7 @@ nav {
 		width: 226px;
 		position: absolute;
 		font-size: 1em;
-		font-family: 'AvenirNextLTPro-Light',sans-serif!important;
+		font-family: @body-font!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -630,7 +628,7 @@ nav {
 
 			a {
 				font-size: 0.8em;
-				font-family: AvenirNextLTPro-Light;
+				font-family: @body-font;
 			}
 
 			&:nth-child(even) {
