--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -75,7 +75,7 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			text-overflow: ellipsis;
-			font-family: 'AvenirNextLTPro-Light', sans-serif !important;
+			font-family: @body-font !important;
 			line-height: 1.55;
 			font-size: 1em;
 			font-weight: 500;
@@ -89,7 +89,7 @@
 			}
 
 			a {
-				font-family: 'AvenirNextLTPro-Light', sans-serif !important;
+				font-family: @body-font !important;
 				display: inline !important;
 			}
 		}
