--- a/src/less/global/search.less
+++ b/src/less/global/search.less
@@ -41,7 +41,7 @@ nav {
 
   #my-custom-results {
     font-size: 1em;
-    font-family: 'AvenirNextLTPro-Light', sans-serif !important;
+    font-family: @body-font !important;
     font-weight: 200;
     transition: 0.3s all;
     outline: none;
@@ -129,7 +129,7 @@ nav {
     width: 226px;
     position: absolute;
     font-size: 1em;
-    font-family: 'AvenirNextLTPro-Light', sans-serif!important;
+    font-family: @body-font!important;
     font-weight: 200;
     transition: 0.3s all;
     outline: none;
