--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -22,7 +22,7 @@
 			-moz-transition: all 0.2s ease;
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
-			font-family: 'AvenirNextLTPro-Light',sans-serif;
+			font-family: @body-font;
 			font-weight: 300;
 			flex-grow: 1;
 			text-align: center;
@@ -479,7 +479,7 @@
 			margin-bottom: 15px;
 			letter-spacing: 1px;
 			margin-top: 0;
-			font-family: 'AvenirNextLTPro-Light',serif;
+			font-family: @body-font;
 			@media(max-width: 1040px) {
 				font-size: 1.3em !important;
 			}
@@ -515,7 +515,7 @@
 			margin-bottom: 10px;
 			text-transform: uppercase;
 			font-size: 1.2em;
-			font-family: 'ProductSans-Medium', AvenirNextLTPro-Light, serif;
+			font-family: @body-font-bold;
 			color: @header-color;
 			font-weight: 500;
 		}
@@ -526,7 +526,7 @@
 			font-weight: 500;
 			margin-bottom: 8px;
 			text-transform: uppercase;
-			font-family: 'AvenirNextLTPro-Medium',AvenirNextLTPro-Light,serif;
+			font-family: @body-font-bold;
 			letter-spacing: 1px;
 			color: #1f5373;
 			margin-top: 0;
@@ -580,7 +580,7 @@
 				margin-bottom: 17px;
 				line-height: 1.35;
 				padding: 0 0 10px;
-				font-family: 'AvenirNextLTPro-Light' ,sans-serif;
+				font-family: @body-font;
 
 				.post-title,
 				.single-author-name {
@@ -654,7 +654,7 @@
 		p {
 			margin-bottom: 10px;
 			font-size: 16px;
-			font-family: 'AvenirNextLTPro-Light',sans-serif;
+			font-family: @body-font;
 		}
 	}
 }
