--- a/src/less/posts/article-preview.less
+++ b/src/less/posts/article-preview.less
@@ -97,7 +97,7 @@
       position: relative;
 
       span {
-        font-family: 'AvenirNextLTPro-Light', sans-serif !important;
+        font-family: @body-font !important;
         color: #435663;
         line-height: 1;
         overflow: hidden;
