--- a/src/less/posts/baguettebox.less
+++ b/src/less/posts/baguettebox.less
@@ -4,6 +4,6 @@
 
 #baguetteBox-overlay .full-image figcaption {
 	padding: 30px 20px;
-	font-family: 'AvenirNextLTPro-Light';
+	font-family: @body-font;
 	width: 100%;
 }
