--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -62,7 +62,7 @@
         }
 
         &::before {
-          font-family: 'AvenirNextLTPro-Light', sans-serif !important;
+          font-family: @body-font !important;
         }
       }
     }
@@ -240,7 +240,7 @@
 
   .dataframe thead th {
     text-align: center !important;
-    font-family: 'AvenirNextLTPro-Light', sans-serif !important;
+    font-family: @body-font !important;
   }
 
   .dataframe tbody tr th:only-of-type {
