--- a/src/less/projects/projects-page.less
+++ b/src/less/projects/projects-page.less
@@ -33,7 +33,7 @@
   }
 
   h3 {
-    font-family: 'AvenirNextLTPro-Light', sans-serif !important;
+    font-family: @body-font !important;
     margin-bottom: 0;
     font-size: 1.4em;
   }
