--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -174,7 +174,7 @@
 
   .post-title a {
     font-size: 1em !important;
-    font-family: 'ProductSans-Regular',sans-serif;
+    font-family: @header-light-font;
   }
 }
 
