--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -223,7 +223,7 @@
     .title-mobile {
       display: none;
       margin: 10px 0 20px!important;
-      font-family: 'AvenirNextLTPro-Light', serif;
+      font-family: @body-font;
       font-size: 1.2em;
       line-height: 1.2;
       text-align: left;
@@ -250,7 +250,7 @@
       text-overflow: ellipsis;
       display: -webkit-box;
       -webkit-line-clamp: 4;
-      font-family: 'AvenirNextLTPro-Light', sans-serif !important;
+      font-family: @body-font !important;
       text-align: left;
       -webkit-box-orient: vertical;
       overflow: hidden;
