--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -141,7 +141,7 @@
 
         h6 {
           line-height: 1.3;
-          font-family: 'AvenirNextLTPro-Light';
+          font-family: @body-font;
           font-size: 1em;
           margin: 0 0 5px !important;
           color: #5D6178;
@@ -155,7 +155,7 @@
             text-overflow: normal;
             line-height: 1.25;
             font-size: .9em;
-            font-family: 'AvenirNextLTPro-Light';
+            font-family: @body-font;
             text-overflow: unset;
             white-space: normal;
             font-weight: 100;
