--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -298,7 +298,7 @@ section .widget.newsletter {
 		p {
 			margin-bottom: 10px;
 			font-size: 16px;
-			font-family: 'AvenirNextLTPro-Light',sans-serif;
+			font-family: @body-font;
 		}
 	}
 
