--- a/partials/footer/footer-about.hbs
+++ b/partials/footer/footer-about.hbs
@@ -1,4 +1,4 @@
-<!-- start about widget -->
+<!-- Start About Widget -->
 <div class="widget about">
   {{#if @site.logo}}
     <a class="logo"href="{{@site.url}}">
@@ -15,4 +15,4 @@
     <a class="btn rss" href="{{@site.url}}/rss/"><i class="fas fa-rss"></i></a>
   </div>
 </div>
-<!-- end about widget -->
+<!-- End About Widget -->
