--- a/partials/footer/footer-authors.hbs
+++ b/partials/footer/footer-authors.hbs
@@ -1,4 +1,4 @@
-<!-- start authors widget -->
+<!-- Start Contributors Widget -->
 <div class="widget contributors">
 	<h4 class="footer-title">Authors</h4>
 	<ul>
@@ -11,4 +11,4 @@
 		{{/get}}
 		</ul>
 </div>
-<!-- end authors widget -->
+<!-- End Contributors Widget -->
