--- a/partials/footer/footer-tags.hbs
+++ b/partials/footer/footer-tags.hbs
@@ -1,4 +1,4 @@
-<!-- start tags widget -->
+<!-- Start Tags Widget -->
 <div class="widget tags">
 	<h4 class="footer-title">Tags</h4>
 	<ul>
@@ -9,4 +9,4 @@
 		{{/get}}
 		</ul>
 </div>
-<!-- end tags widget -->
+<!-- Start Tags Widget -->
