--- a/partials/footer/footer.hbs
+++ b/partials/footer/footer.hbs
@@ -1,4 +1,4 @@
-<!-- start main-footer -->
+<!-- Start Footer -->
 <footer class="main-footer">
 	<div class="footer-container">
 		{{> footer/footer-about}}
@@ -10,4 +10,4 @@
 <div class="copyright">
 	{{t "Copyright"}}
 </div>
-<!-- end main-footer -->
+<!-- End Footer -->
