--- a/partials/posts/postfooter.hbs
+++ b/partials/posts/postfooter.hbs
@@ -1,4 +1,4 @@
-<!-- start postfooter -->
+<!-- Start Postfooter -->
 <section class="after-post">
   {{> posts/nextprev}}
   {{> author/about-author}}
@@ -8,4 +8,4 @@
   {{> posts/relatedposts}}
   {{> widgets/widget-newsletter}}
 </section>
- <!-- end postfooter -->
+ <!-- End Postfooter -->
