--- a/partials/posts/relatedposts.hbs
+++ b/partials/posts/relatedposts.hbs
@@ -1,4 +1,4 @@
-<!-- start prev next wrap -->
+<!-- Start Related Posts -->
 <div class="prev-next-wrap">
 	{{#get "posts" limit="3" include="tags,authors" filter="slug:-{{slug}}+tag:{{primary_tag.slug}}"}}
 		{{#foreach posts}}
@@ -6,3 +6,4 @@
 			{{/foreach}}
 		{{/get}}
 </div>
+<!-- End Related Posts -->
