--- a/partials/posts/share-links.hbs
+++ b/partials/posts/share-links.hbs
@@ -1,22 +1,19 @@
+<!-- Start Share Buttons -->
 <ul class="share-icons social-btns">
-    <!-- Twitter -->
-    <li class="btn twitter">
-        <a href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;"><i class="fab fa-twitter"></i></a>
-    </li>
-    <!-- Facebook -->
-    <li class="btn facebook">
-        <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;"><i class="fab fa-facebook"></i></a>
-    </li>
-    <!-- LinkedIn -->
-    <li class="btn linkedin">
-        <a href="https://www.linkedin.com/shareArticle?mini=true%26url={{url absolute="true"}}%26source={{@site.url}}" onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;"><i class="fab fa-linkedin"></i></a>
-    </li>
-    <!-- Y Combinator -->
-    <li class="btn ycombinator">
-        <a href=`javascript:window.location=%22https://news.ycombinator.com/submitlink?u=%22+encodeURIComponent(document.location)+%22&t=%22+encodeURIComponent(document.title)`><i class="fab fa-y-combinator"></i></a>
-    </li>
-    <!-- Reddit -->
-    <li class="btn reddit">
-        <a href='http://www.reddit.com/submit?url={{url absolute="true"}}'><i class="fab fa-reddit-alien"></i></a>
-    </li>
+  <li class="btn twitter">
+    <a href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;"><i class="fab fa-twitter"></i></a>
+  </li>
+  <li class="btn facebook">
+    <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;"><i class="fab fa-facebook"></i></a>
+  </li>
+  <li class="btn linkedin">
+    <a href="https://www.linkedin.com/shareArticle?mini=true%26url={{url absolute="true"}}%26source={{@site.url}}" onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;"><i class="fab fa-linkedin"></i></a>
+  </li>
+  <li class="btn ycombinator">
+    <a href=`javascript:window.location=%22https://news.ycombinator.com/submitlink?u=%22+encodeURIComponent(document.location)+%22&t=%22+encodeURIComponent(document.title)`> <i class="fab fa-y-combinator"></i></a>
+  </li>
+  <li class="btn reddit">
+    <a href='http://www.reddit.com/submit?url={{url absolute="true"}}'><i class="fab fa-reddit-alien"></i></a>
+  </li>
 </ul>
+<!-- End Share Buttons -->
