--- a/partials/projects/projects-kanban.hbs
+++ b/partials/projects/projects-kanban.hbs
@@ -1,4 +1,4 @@
-<!-- start kanban widget -->
+<!-- Start Kanban -->
 <div>
   <div id="kanban">
     <div class="column swiper-slide b">
@@ -39,4 +39,4 @@
     </div>
   </div>
 </div>
-<!-- end kanban pagination -->
+<!-- End Kanban -->
