--- a/partials/widgets/widget-author.hbs
+++ b/partials/widgets/widget-author.hbs
@@ -1,4 +1,4 @@
-<!-- start author widget -->
+<!-- Start Author Widget -->
 {{#foreach authors}}
   <div class="about-author clearfix widget">
     <h4 class="title">Author</h4>
@@ -30,8 +30,8 @@
     {{#if bio}}
       <div class="bio">
         {{{bio}}}
-        </div>
+      </div>
     {{/if}}
   </div>
 {{/foreach}}
-<!-- end author widget -->
+<!-- End Author Widget -->
