--- a/partials/widgets/widget-github.hbs
+++ b/partials/widgets/widget-github.hbs
@@ -1,25 +1,8 @@
-<!-- start github widget -->
+<!-- Start Github Widget -->
 <div class="widget github" style="display:none;">
   <h4 class="title">Github</h4>
   <div class="widget-body">
     <div id="github-card-author"></div>
   </div>
 </div>
-<!--
-<script src="{{asset "/js/includes/gh-profile-card.min.js"}}"></script>
-<script>
-  function createCard(username) {
-    var widget = new GitHubCard({
-      username: username,
-      template: '#github-card-author',
-      sortBy: 'stars',
-      reposHeaderText: 'Most starred',
-      maxRepos: 3
-    });
-
-    widget.init();
-    $('.github').css('display', 'block');
-  }
-
-</script>-->
-<!-- end github widget -->
+<!-- End Github Widget -->
