--- a/partials/widgets/widget-newsletter.hbs
+++ b/partials/widgets/widget-newsletter.hbs
@@ -1,10 +1,10 @@
-<!-- start subscribe widget -->
+<!-- Start Newsletter Widget -->
 {{#if @labs.subscribers}}
-<div id="newsletter-sidebar" class="widget newsletter">
-  <section class="gh-subscribe">
-  <h4 class="sidebar-title">{{t "Newsletter"}}</h4>
-  <div class="newsletter input-group">
-    <p class="news-description">Are you into data to the point where it's almost embarrasing? Toss your email in - we'll promise to only give you the good stuff.</p>
+  <div id="newsletter-sidebar" class="widget newsletter">
+    <section class="gh-subscribe">
+      <h4 class="sidebar-title">{{t "Newsletter"}}</h4>
+      <div class="newsletter input-group">
+        <p class="news-description">Are you into data to the point where it's almost embarrasing? Toss us your email - we'll promise to only give you the good stuff.</p>
         {{subscribe_form
           placeholder="Your email address"
           input_class="subscribe-input-class"
@@ -14,8 +14,8 @@
           input_id="sidebar-newsletter-input"
           button_id="sidebar-newsletter-button"
         }}
+      </div>
+    </section>
   </div>
-  </section>
-</div>
 {{/if}}
-<!-- end subscribe widget -->
+<!-- End Newsletter Widget -->
