--- a/partials/widgets/widget-sidebartag.hbs
+++ b/partials/widgets/widget-sidebartag.hbs
@@ -1,4 +1,4 @@
-<!-- start tag cloud widget -->
+<!-- Start Tag Widget -->
 <div class="widget tag">
 	<h4 class="title">Tags</h4>
 	<div class="tag-cloud tag">
@@ -9,4 +9,4 @@
 		{{/get}}
 	</div>
 </div>
-<!-- end tag cloud widget -->
+<!-- End Tag Widget -->
