--- a/partials/widgets/widget-social.hbs
+++ b/partials/widgets/widget-social.hbs
@@ -1,4 +1,4 @@
-<!-- start widget -->
+<!-- Start Social Widget -->
 <div class="widget">
 	<h4 class="title">{{t "Follow"}}</h4>
 	<div class="social-btns">
@@ -10,4 +10,4 @@
 		<a class="btn rss" href="{{@site.url}}/rss/"><i class="fas fa-rss"></i></a>
 	</div>
 </div>
-<!-- end widget -->
+<!-- End Widget -->
