--- a/partials/widgets/widget-text.hbs
+++ b/partials/widgets/widget-text.hbs
@@ -1,8 +1,8 @@
-<!-- start text widget -->
+<!-- Start Text Widget -->
 <div class="widget text">
 	<h1>{{@site.title}}</h1>
-		<div>
-			<p>{{@site.description}}</p>
-		</div>
+	<div>
+		<p>{{@site.description}}</p>
+	</div>
 </div>
-<!-- end text widget -->
+<!-- End Text Widget -->
