--- a/partials/posts/article-preview.hbs
+++ b/partials/posts/article-preview.hbs
@@ -1,4 +1,4 @@
-<!-- start article preview -->
+<!-- Start Article Preview -->
 <div class="article-preview">
   <a href="{{url}}">
     <div class="img-wrapper " style="background-image: url({{img_url feature_image}});"></div>
@@ -6,10 +6,12 @@
       <h5 class="related-title">{{title}}</h5>
       {{#primary_author}}
         {{#if profile_image}}
-          <a href="{{url}}" class="author-mobile"><img src="{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="{{name}}'s avatar" class="avi"><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMMM DD"}}</span></div></a>
+          <a href="{{url}}" class="author-mobile"><img src="{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="{{name}}'s avatar" class="avi">
+            <div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMMM DD"}}</span></div>
+          </a>
         {{/if}}
       {{/primary_author}}
     </div>
-    </a>
+  </a>
 </div>
-<!-- end article preview -->
+<!-- End Article Preview -->
