--- a/partials/posts/nextprev.hbs
+++ b/partials/posts/nextprev.hbs
@@ -1,22 +1,24 @@
+<!-- Start Next-prev Widget -->
 <div class="nextprev-container">
-<div class="nextprev">
-  <a class="prev-article seriespagination" href="#">
-    <svg class="bluearrow" data-cy="arrow-left-icon" version="1.1" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
-      <path fill="#010101" d="M37.802,46.247L12.376,24L37.801,1.753c0.416-0.364,0.458-0.996,0.094-1.411 c-0.364-0.417-0.994-0.459-1.411-0.095l-26.286,23C9.982,23.438,9.857,23.712,9.857,24s0.125,0.562,0.342,0.753l26.286,23 C36.675,47.919,36.91,48,37.143,48c0.278,0,0.555-0.115,0.753-0.342C38.26,47.243,38.218,46.611,37.802,46.247z"></path>
-    </svg>
-    <div class="info">
-      <h6 class="prev-title">Previous Post</h6>
-      <p class="prev-excerpt">Overview</p>
-    </div>
-  </a>
-  <a class="next-article seriespagination" href="/api/handlebars-themes/">
-    <div class="info">
-      <h6 class="next-title">Next Post</h6>
-      <p class="next-excerpt">Overview</p>
-    </div>
-    <svg class="bluearrow" data-cy="arrow-right-icon" version="1.1" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
-      <path fill="#010101" d="M37.802,23.247l-26.286-23C11.1-0.116,10.47-0.074,10.105,0.342c-0.363,0.415-0.321,1.047,0.094,1.411 L35.624,24L10.199,46.247c-0.416,0.364-0.458,0.996-0.094,1.411C10.303,47.885,10.58,48,10.858,48c0.233,0,0.468-0.081,0.658-0.247 l26.286-23c0.216-0.191,0.341-0.465,0.341-0.753S38.019,23.437,37.802,23.247z"></path>
-    </svg>
-  </a>
+  <div class="nextprev">
+    <a class="prev-article seriespagination" href="#">
+      <svg class="bluearrow" data-cy="arrow-left-icon" version="1.1" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+        <path fill="#010101" d="M37.802,46.247L12.376,24L37.801,1.753c0.416-0.364,0.458-0.996,0.094-1.411 c-0.364-0.417-0.994-0.459-1.411-0.095l-26.286,23C9.982,23.438,9.857,23.712,9.857,24s0.125,0.562,0.342,0.753l26.286,23 C36.675,47.919,36.91,48,37.143,48c0.278,0,0.555-0.115,0.753-0.342C38.26,47.243,38.218,46.611,37.802,46.247z"></path>
+      </svg>
+      <div class="info">
+        <h6 class="prev-title">Previous Post</h6>
+        <p class="prev-excerpt">Overview</p>
+      </div>
+    </a>
+    <a class="next-article seriespagination" href="/api/handlebars-themes/">
+      <div class="info">
+        <h6 class="next-title">Next Post</h6>
+        <p class="next-excerpt">Overview</p>
+      </div>
+      <svg class="bluearrow" data-cy="arrow-right-icon" version="1.1" x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+        <path fill="#010101" d="M37.802,23.247l-26.286-23C11.1-0.116,10.47-0.074,10.105,0.342c-0.363,0.415-0.321,1.047,0.094,1.411 L35.624,24L10.199,46.247c-0.416,0.364-0.458,0.996-0.094,1.411C10.303,47.885,10.58,48,10.858,48c0.233,0,0.468-0.081,0.658-0.247 l26.286-23c0.216-0.191,0.341-0.465,0.341-0.753S38.019,23.437,37.802,23.247z"></path>
+      </svg>
+    </a>
+  </div>
 </div>
-</div>
+<!-- End Next-prev Widget -->
