--- a/partials/widgets/widget-recentpost.hbs
+++ b/partials/widgets/widget-recentpost.hbs
@@ -1,14 +1,15 @@
-<!-- start recent widget -->
+<!-- Start Recent Widget -->
 {{#get "posts" limit="4" filter="tags:-[hash-hidden,Roundup,roundup]"}}
-<div class="widget recent">
-	<h4 class="title">Recent</h4>
-	<div class="recent-post">
-		{{#foreach posts}}
-			<div class="recent-single-post">
-				<a href="{{url}}" class="post-title">{{title}}</a><div class="date">{{date format="MMMM DD, YYYY"}}</div>
-			</div>
-		{{/foreach}}
+	<div class="widget recent">
+		<h4 class="title">Recent</h4>
+		<div class="recent-post">
+			{{#foreach posts}}
+				<div class="recent-single-post">
+					<a href="{{url}}" class="post-title">{{title}}</a>
+					<div class="date">{{date format="MMMM DD, YYYY"}}</div>
+				</div>
+			{{/foreach}}
+		</div>
 	</div>
-</div>
 {{/get}}
-<!-- end recent widget -->
+<!-- End Recent Widget -->
