--- a/partials/author/author-card.hbs
+++ b/partials/author/author-card.hbs
@@ -1,3 +1,4 @@
+<!-- Start Author Card -->
 <div class="author-card-small {{slug}}">
   {{#if cover_image}}
     <div class="author-cover" style="background:url({{cover_image}})">
@@ -67,3 +68,4 @@
     </ul>
   </div>
 </div>
+<!-- End Author Card -->
