--- a/partials/author/author-sidebar.hbs
+++ b/partials/author/author-sidebar.hbs
@@ -1,4 +1,4 @@
-
+<!-- Start Author Sidebar -->
 <div class="sidebar" class="{{author.slug}}">
   {{> author/widget-authorwebsite}}
 	{{> author/widget-authorgithub}}
@@ -11,3 +11,4 @@
         {{> author/widget-authortwitter}}
 	{{/has}}
 </div>
+<!-- End Author Sidebar -->
