--- a/partials/author/widget-authorwebsite.hbs
+++ b/partials/author/widget-authorwebsite.hbs
@@ -1,15 +1,8 @@
-<!-- start website widget -->
+<!-- Start Website Widget -->
 {{#if "website"}}
-      <div class="widget author-website">
-          <h4 class="title" style="margin-bottom:0;">Website</h4>
-          <a class="previewimage" href="{{website}}">{{website}}</a>
-      </div>
+  <div class="widget author-website">
+    <h4 class="title" style="margin-bottom:0;">Website</h4>
+    <a class="previewimage" href="{{website}}">{{website}}</a>
+  </div>
 {{/if}}
-<!-- <script>
-  $(document).ready(function() {
-    function websiteCard(website) {
-    }
-    websiteCard('{{website}}');
-  })
-</script>-->
-<!-- end website widget -->
+<!-- End Website Widget -->
