--- a/partials/cover-tag.hbs
+++ b/partials/cover-tag.hbs
@@ -1,3 +1,4 @@
+<!-- Start Tag Cover -->
 {{#is 'tag'}}
 	{{! Series Page with background image}}
 	{{#tag}}
@@ -164,3 +165,4 @@
 		AuthorDetails();
 	</script>
 {{/is}}
+<!-- End Tag Cover -->
