--- a/partials/lazyload.hbs
+++ b/partials/lazyload.hbs
@@ -1,4 +1,4 @@
-<!-- Start lazy load image logic -->
+<!-- Start lazy load -->
 <script>
   // Set the options to make LazyLoad self-initialize
   window.lazyLoadOptions = {
