--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,9 +1,9 @@
-<!-- start post -->
+<!-- Start Loop -->
 {{#foreach posts}}
-		{{#if featured}}
-			{{> featuredpostpreview}}
-		{{else}}
-			{{> postpreview}}
-		{{/if}}
+	{{#if featured}}
+		{{> featuredpostpreview}}
+	{{else}}
+		{{> postpreview}}
+	{{/if}}
 {{/foreach}}
-<!-- end post -->
+<!-- End Loop -->
