--- a/partials/nav/mobile-navigation.hbs
+++ b/partials/nav/mobile-navigation.hbs
@@ -1,5 +1,7 @@
+<!-- Start Mobile Nav -->
 <div class="mobile-navigation">
-    <a href="{{@site.url}}/about">About</a>
-    <a href="{{@site.url}}/projects">Projects</a>
-    <a href="{{@site.url}}/series">Series'</a>
+  <a href="{{@site.url}}/about">About</a>
+  <a href="{{@site.url}}/projects">Projects</a>
+  <a href="{{@site.url}}/series">Series'</a>
 </div>
+<!-- End Mobile Nav -->
