--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -1,5 +1,5 @@
 {{! Pagination file for custom pagination}}
-<!-- start pagination -->
+<!-- Start Pagination -->
 <section class="pagination">
 	{{#if prev}}
 		<a class="newer-posts" href="{{page_url prev}}"><i class="fas fa-arrow-left"></i></i></a>
@@ -55,4 +55,4 @@
 	}
 	//For each number, from 1 to the total number of pages, add in the page number and a link to the page
 </script>
-<!-- end pagination -->
+<!-- End Pagination -->
