--- a/partials/projects/projects-githubrepo.hbs
+++ b/partials/projects/projects-githubrepo.hbs
@@ -1,19 +1,21 @@
+<!-- Start Github Repo -->
 <a href="{{url}}" class="github-card" data-github="{{name}}">
-    <h3>nexmo-php</h3>
-    <p class="repo-description">{{description}}</p>
-    <span class="github-card__meta">
-      <span class="github-card__language-icon" style="color: #4C5E99;">●</span> PHP
+  <h3>nexmo-php</h3>
+  <p class="repo-description">{{description}}</p>
+  <span class="github-card__meta">
+    <span class="github-card__language-icon" style="color: #4C5E99;">●</span> PHP
+  </span>
+  <span class="github-card__meta">
+    <i class="fa fa-star" aria-hidden="true"></i>
+    <span data-stars>
+      <i class="fa fa-spinner" aria-hidden="true"></i>
     </span>
-    <span class="github-card__meta">
-      <i class="fa fa-star" aria-hidden="true"></i>
-      <span data-stars>
-        <i class="fa fa-spinner" aria-hidden="true"></i>
-      </span>
+  </span>
+  <span class="github-card__meta">
+    <i class="fa fa-code-fork" aria-hidden="true"></i>
+    <span data-forks>
+      <i class="fa fa-spinner" aria-hidden="true"></i>
     </span>
-    <span class="github-card__meta">
-      <i class="fa fa-code-fork" aria-hidden="true"></i>
-      <span data-forks>
-        <i class="fa fa-spinner" aria-hidden="true"></i>
-      </span>
-    </span>
-  </a>
+  </span>
+</a>
+<!-- End Github Repo -->
