--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -1,4 +1,4 @@
-<!-- start sidebar -->
+<!-- Start Sidebar -->
 <aside class="sidebar">
 	{{#is "home,paged"}}
 		{{> widgets/widget-text}}
@@ -25,4 +25,4 @@
 		{{> widgets/widget-twitter}}
 	{{/is}}
 </aside>
-<!-- end sidebar -->
+<!-- End Sidebar -->
