--- a/partials/author/about-author.hbs
+++ b/partials/author/about-author.hbs
@@ -1,4 +1,4 @@
-<!-- start about-the-author -->
+<!-- Start Author Card -->
 {{#foreach authors include="count.posts"}}
 	<div class="about-author author-card-large clearfix">
 		{{#if profile_image}}
@@ -33,7 +33,6 @@
 				</div>
 			{{/if}}
 		</div>
-
 	</div>
 {{/foreach}}
-<!-- end about-the-author -->
+<!-- End Author Card -->
