--- a/partials/author/cover-author.hbs
+++ b/partials/author/cover-author.hbs
@@ -1,40 +1,28 @@
-	<div class="cover author-cover">
-			{{#if profile_image}}
-				<img src="{{profile_image}}" alt="{{name}}'s' avatar" class="avatar">
-			{{/if}}
-		<h3 class="author-name">
-			{{name}}
-		</h3>
-		<div class="meta-info">
-			<span class="post-count"><i class="fal fa-pencil"></i>{{#get "posts" limit="all" filter="authors:{{slug}}"}}{{plural posts.length empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</span>
-			{{#if location}}
-				<span class="location"><i class="fal fa-map-marker-alt"></i>{{location}}</span>
-			{{/if}}
-			{{#if website}}
-				<span class="website"><a href="{{website}}" target="_BLANK"><i class="fal fa-globe"></i> {{t "Website"}}</a></span>
-			{{/if}}
-			{{#if twitter}}
-				<span class="twitter"><a href="{{twitter_url}}" target="_BLANK"><i class="fab fa-twitter"></i> {{twitter}}</a></span>
-			{{/if}}
-			{{#if facebook}}
-				<span class="facebook"><a href="{{facebook_url}}" target="_BLANK"><i class="fa fa-facebook"></i></a></span>
-			{{/if}}
-		</div>
-		{{#if bio}}
-			<div class="bio">{{{bio}}}</div>
+<!-- Start Author Cover -->
+<div class="cover author-cover">
+	{{#if profile_image}}
+		<img src="{{profile_image}}" alt="{{name}}'s' avatar" class="avatar">
+	{{/if}}
+	<h3 class="author-name">
+		{{name}}
+	</h3>
+	<div class="meta-info">
+		<span class="post-count"><i class="fal fa-pencil"></i>{{#get "posts" limit="all" filter="authors:{{slug}}"}}{{plural posts.length empty=(t "0 Posts") singular=(t "% Post") plural=(t "% Posts")}}{{/get}}</span>
+		{{#if location}}
+			<span class="location"><i class="fal fa-map-marker-alt"></i>{{location}}</span>
+		{{/if}}
+		{{#if website}}
+			<span class="website"><a href="{{website}}" target="_BLANK"><i class="fal fa-globe"></i> {{t "Website"}}</a></span>
+		{{/if}}
+		{{#if twitter}}
+			<span class="twitter"><a href="{{twitter_url}}" target="_BLANK"><i class="fab fa-twitter"></i> {{twitter}}</a></span>
+		{{/if}}
+		{{#if facebook}}
+			<span class="facebook"><a href="{{facebook_url}}" target="_BLANK"><i class="fa fa-facebook"></i></a></span>
 		{{/if}}
 	</div>
-
-	<!--<script>
-		$(document).ready(function() {
-			$.get(
-				ghost.url.api('posts', {
-					limit: 'all',
-					include: 'count.posts',
-					filter: 'authors:{{slug}}'
-				})).done(function(data) {
-				$('.post-count').append(data.posts.length);
-				$('.post-count').append(' Posts');
-			});
-		});
-	</script>-->
+	{{#if bio}}
+		<div class="bio">{{{bio}}}</div>
+	{{/if}}
+</div>
+<!-- End Author Cover -->
