--- a/partials/author/widget-authortwitter.hbs
+++ b/partials/author/widget-authortwitter.hbs
@@ -1,6 +1,6 @@
-<!-- start twitter widget -->
+<!-- Start Twitter Widget -->
 <div class="widget twitter">
   <h4 class="title">Twitter</h4>
-    <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="105906/"></script> <!-- end feedwind code -->
+  <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="105906/"></script>
 </div>
-<!-- end twitter widget -->
+<!-- End Twitter Widget -->
