--- a/partials/author/widget-rss.hbs
+++ b/partials/author/widget-rss.hbs
@@ -1,6 +1,6 @@
-<!-- start feedwind code -->
+<!-- Start RSS Widget -->
 <div class="widget" style="0">
-    <h4 class="title">Personal RSS</h4>
-    <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78860/"></script> <!-- end feedwind code -->
+  <h4 class="title">Personal RSS</h4>
+  <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78860/"></script>
 </div>
-<!-- end feedwind code -->
+<!-- End RSS Widget -->
